<resources>
    <string name="app_name">Just Java</string>
    <string name="enter_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="qtyno">2</string>
    <string name="orderSummary">Order Summary</string>
    <string name="order">Order</string>
    <string name="priceval">$10</string>
    <string name="incrementVal">+</string>
    <string name="decrementVal">-</string>
    <string name="action_settings">Settings</string>
</resources>
